fixed visibly bbugs'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,3 +179,9 @@ html, body {
 .image {
     width: 50vmin;
 }
+.hidden {
+    visibility: hidden;
+}
+.show {
+    visibility: visible;
+}
